test/k8sT/manifests/cnp-matchexpressions-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-matchexpressions-deny"
spec:
  description: "Policy to test matchExpressions key"
  endpointSelector:
    matchLabels:
      id: app1
  ingressDeny:
  - fromEndpoints:
    - matchExpressions:
      - {key: 'appSecond', operator: Exists}
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
